--- a/views/fragmente/header.ejs
+++ b/views/fragmente/header.ejs
@@ -53,10 +53,10 @@
 
                     <!-- Evenimente -->
                     <li>
-                        <a href="#evenimente">Evenimente</a>
+                        <a href="/evenimente">Evenimente</a>
                         <ul>
-                            <li><a href="#lansari">Lansări</a></li>
-                            <li><a href="#concerte">Concerte</a></li>
+                            <li><a href="/lansari">Lansări</a></li>
+                            <li><a href="/concerte">Concerte</a></li>
                         </ul>
                     </li>
 
