--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -14,6 +14,8 @@
 <link rel="stylesheet" type="text/css" href="/resurse/css/nav.css">
 <!-- <link rel="stylesheet" type="text/css" href="/resurse/css/stilizare-linkuri.css"> -->
 <link rel="stylesheet" type="text/css" href="/resurse/css/video.css">
+<!-- Efecte CSS pentru HR cu gradient radial și baloane -->
+<link rel="stylesheet" type="text/css" href="/resurse/css/efecte.css">
 <!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
