--- a/views/fragmente/header.ejs
+++ b/views/fragmente/header.ejs
@@ -63,6 +63,7 @@
                             <li><a href="/despre#poveste">Povestea noastră</a></li>
                             <li><a href="/despre#misiune">Misiunea noastră</a></li>
                             <li><a href="/despre#echipa">Echipa noastră</a></li>
+                            <li><a href="/despre#tabel">Produsele noastre populare</a></li>
                             <li><a href="/despre#contact">Contact</a></li>
                             <li><a href="/despre#locatie">Locație</a></li>
                             
