--- a/views/pagini/despre.ejs
+++ b/views/pagini/despre.ejs
@@ -15,7 +15,7 @@
             <h1>Despre Vinyl & Beats</h1>
             
             <article class="despre-article" id="poveste">
-                <h2>Povestea noastră</h2>
+                <h2 data-text="Povestea noastră">Povestea noastră</h2>
                 <div class="despre-content">
                     <div class="despre-text">
                         <p>Vinyl & Beats a luat naștere în 2015 din pasiunea fondatorilor pentru muzica autentică și sunetul cald al vinilurilor. 
@@ -64,7 +64,10 @@
             <article class="despre-article" id="contact">
                 <h2>Contact</h2>
                 <div class="contact-section">
-                    <div class="contact-info">
+                        <div class="text-animat-container">
+                            <div class="text-animat">🎵 Vinyl & Beats - Muzică autentică pentru pasionați! 🎶 Descoperă colecția noastră de viniluri și echipamente audio premium! 🎵</div>
+                        </div>
+                        <div class="contact-info">
                         <p>Ne puteți găsi la adresa:</p>
                         <address>
                             <i class="fas fa-map-marker-alt"></i> Strada Muzicii nr. 42<br>
@@ -94,6 +97,71 @@
                     </div>
                 </div>
             </article>
+
+            <article class="despre-article" id="produse">
+    <h2>Produsele Noastre Populare</h2>
+    
+    <div class="tabel-responsive-container" id="tabel">
+        <table id="tabel-produse-muzicale">
+            <caption>Selecție din produsele disponibile în magazinul Vinyl & Beats</caption>
+            <thead>
+                <tr>
+                    <th>Produs</th>
+                    <th>Tip</th>
+                    <th>Gen Muzical</th>
+                    <th>Preț (Lei)</th>
+                    <th>Stoc</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Thriller - Michael Jackson</td>
+                    <td>Vinil</td>
+                    <td>Pop</td>
+                    <td>89 Lei</td>
+                    <td>În stoc</td>
+                </tr>
+                <tr>
+                    <td>Kind of Blue - Miles Davis</td>
+                    <td>CD</td>
+                    <td>Jazz</td>
+                    <td>45 Lei</td>
+                    <td>În stoc</td>
+                </tr>
+                <tr>
+                    <td>The Dark Side of the Moon</td>
+                    <td>Vinil</td>
+                    <td>Rock</td>
+                    <td>125 Lei</td>
+                    <td>Stoc limitat</td>
+                </tr>
+                <tr>
+                    <td>Abbey Road - The Beatles</td>
+                    <td>Casetă</td>
+                    <td>Rock</td>
+                    <td>35 Lei</td>
+                    <td>În stoc</td>
+                </tr>
+                <tr>
+                    <td>Random Access Memories</td>
+                    <td>CD</td>
+                    <td>Electronic</td>
+                    <td>55 Lei</td>
+                    <td>În stoc</td>
+                </tr>
+                <tr>
+                    <td>Blue Train - John Coltrane</td>
+                    <td>Vinil</td>
+                    <td>Jazz</td>
+                    <td>95 Lei</td>
+                    <td>Stoc limitat</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</article>
+
+
             
             <article class="despre-article" id="locatie">
                 <h2>Locație</h2>
